logs/validate.20260408-064822.log
Mode: isolate
Isolate: including Chap62 Chap19 Chap06 Chap05 Chap02
error: unexpected token, expected `;`
    --> src/Chap62/StarPartitionMtEph.rs:1690:43
     |
1690 |                  coin_flips@[p_vec@[j2]@] by {};
     |                                           ^^

error[E0432]: unresolved import `crate::Chap62::StarPartitionMtEph::StarPartitionMtEph::parallel_star_partition`
  --> src/Chap62/StarContractionMtEph.rs:38:9
   |
38 |     use crate::Chap62::StarPartitionMtEph::StarPartitionMtEph::parallel_star_partition;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `parallel_star_partition` in `Chap62::StarPartitionMtEph::StarPartitionMtEph`

error[E0425]: cannot find type `StarPartitionMtEph` in this scope
    --> src/Chap62/StarPartitionMtEph.rs:1801:30
     |
1801 |     impl std::fmt::Debug for StarPartitionMtEph {
     |                              ^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `StarPartitionMtEph` in this scope
    --> src/Chap62/StarPartitionMtEph.rs:1807:32
     |
1807 |     impl std::fmt::Display for StarPartitionMtEph {
     |                                ^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0425, E0432.
For more information about an error, try `rustc --explain E0425`.
Elapsed: 6s
Sampled Memory Usage: peak rust_verify RSS: 3575MB, peak z3 RSS: 914MB, min free: 22276MB
Sampled CPU Usage: rust_verify: 61s, z3 children: 62s
